Closed Bug 199756 Opened 22 years ago Closed 22 years ago

crash at page load [@ nsDocument::GetPrincipal]

Categories

(Core :: DOM: Core & HTML, defect)

x86
Windows 98
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: keeda)

References

()

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(1 file)

everytime I load the url it crashes with 2003032808 under win98. My old debug build does not show that. TB18582918G TB18582940Q
Can confirm this crash with builds 2003032905 on Linux and 2003032611 on Windows. My Talkback ID for this: TB18594215Y Maybe the same reason that crashes when visiting http://www.proc.org. My Talkback IDs for this: TB18572429G, TB18531097W, TB18594035E Both don't happen up to and including 2003032305.
nsDocument::GetPrincipal 21 BBID range: 18518199 - 18582940 Min/Max Seconds since last crash: 6 - 64215 Min/Max Runtime: 233 - 64215 Crash data range: 2003-03-27 to 2003-03-28 Build ID range: 2003032611 to 2003032808 Stack Trace: nsDocument::GetPrincipal [c:/builds/seamonkey/mozilla/content/base/src/nsDocument.cpp line 854] nsDocument::AddPrincipal [c:/builds/seamonkey/mozilla/content/base/src/nsDocument.cpp line 879] nsScriptLoader::OnStreamComplete [c:/builds/seamonkey/mozilla/content/base/src/nsScriptLoader.cpp line 886] nsStreamLoader::OnStopRequest [c:/builds/seamonkey/mozilla/netwerk/base/src/nsStreamLoader.cpp line 144] nsStreamListenerTee::OnStopRequest [c:/builds/seamonkey/mozilla/netwerk/base/src/nsStreamListenerTee.cpp line 66] nsCOMPtr_base::assign_with_AddRef [c:/builds/seamonkey/mozilla/xpcom/glue/nsCOMPtr.cpp line 71] nsHttpChannel::OnStopRequest [c:/builds/seamonkey/mozilla/netwerk/protocol/http/src/nsHttpChannel.cpp line 3046] nsInputStreamPump::OnStateStop [c:/builds/seamonkey/mozilla/netwerk/base/src/nsInputStreamPump.cpp line 471] nsInputStreamPump::OnInputStreamReady [c:/builds/seamonkey/mozilla/netwerk/base/src/nsInputStreamPump.cpp line 325] nsInputStreamReadyEvent::EventHandler [c:/builds/seamonkey/mozilla/xpcom/io/nsStreamUtils.cpp line 117] PL_HandleEvent [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 660] PL_ProcessPendingEvents [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 596] _md_EventReceiverProc [c:/builds/seamonkey/mozilla/xpcom/threads/plevent.c line 1396] KERNEL32.DLL + 0x24407 (0xbff94407) 0x00658b66 Source File : c:/builds/seamonkey/mozilla/content/base/src/nsDocument.cpp line : 854 (18582940) URL: http://www.rt.mipt.ru/~eugen/xml_about.php (18582918) URL: http://www.rt.mipt.ru/~eugen/xml_about.php (18582918) Comments: load the side url provided in a table bug - bernd (18572429) URL: http://www.proc.org (18572429) Comments: Always crash when entering above URL. (18567915) URL: http://200.210.8.13/~taboca/glik/*.xml (18551511) Comments: crash while displaying Mozilla's error page (connection timeout try later) (18551442) Comments: crash after appear timeout page for www.zive.sk (18549706) Comments: opening HTML report from Xenu broken link searcher (18531097) URL: http://www.proc.org (18531097) Comments: Always crash when entering above URL. (18518199) URL: http://www.ceskenoviny.cz/view-id.php4?id=20030327E02931 (18518199) Comments: accessing www.slunecnice.cz with error page
Component: Browser-General → Networking
Keywords: topcrash
Summary: crash at page load → crash at page load @[nsDocument::GetPrincipal]
changing component
Assignee: asa → dougt
QA Contact: asa → benc
Flags: blocking1.4a?
Keywords: zt4newcrash
the build from 2003-03-25-08 does not crash talkback says it started with 2003-03-26-11 http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=SeaMonkeyAll&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=03%2F25%2F2003+08%3A00%3A00&maxdate=03%2F26%2F2003+11%3A00%3A00&cvsroot=%2Fcvsroot my first guess would be jst's checkin as it heavily modified the nsDocument.cpp file. (But I am very bad at finger pointing)
Yes, this does seem to be from jst's checkin. nsDocument::GetPrincipal() was modified such that |GetPrincipal(nsnull)| is no longer okay.
Component: Networking → DOM Other
Oops. Really changing component foo this time.
Assignee: dougt → dom_bugs
QA Contact: benc → gerardok
Attached patch fix the callerSplinter Review
This fixes it and adds some extra error checking. Do we want to "fix" GetPricipal() instead?
Attachment #118894 - Flags: superreview?(jst)
Attachment #118894 - Flags: review?(bugmail)
*** Bug 199846 has been marked as a duplicate of this bug. ***
Comment on attachment 118894 [details] [diff] [review] fix the caller r=sicking
Attachment #118894 - Flags: review?(bugmail) → review+
Could someone look at bug 199686? It's possible dupe of this bug (I see my crash comments in talkback mining comment #2) and contains different testcase.
Severity: normal → critical
Comment on attachment 118894 [details] [diff] [review] fix the caller btw, this is the right fix. Calling a getter without supplying a returnpointer is very bad practice.
Attachment #118894 - Flags: superreview?(jst) → superreview+
Comment on attachment 118894 [details] [diff] [review] fix the caller Requesting 1.4a approval. This is a simple and very obvious fix for a topcrash.
Comment on attachment 118894 [details] [diff] [review] fix the caller Umm... the approval1.4a? flag is not yet set. Setting it in Harshal's place (see comment #12).
Attachment #118894 - Flags: approval1.4a?
-> To me.
Assignee: dom_bugs → keeda
Comment on attachment 118894 [details] [diff] [review] fix the caller a=dbaron, although you might miss 1.4alpha if it doesn't land quickly...
Attachment #118894 - Flags: approval1.4a? → approval1.4a+
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 199686 has been marked as a duplicate of this bug. ***
Summary: crash at page load @[nsDocument::GetPrincipal] → crash at page load [@ nsDocument::GetPrincipal]
Flags: blocking1.4a?
Crash Signature: [@ nsDocument::GetPrincipal]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: