bug 199756 : Crash at nsDocument::GetPrincipal